[package]
name = "horde"
version = "0.1.2"
edition = "2024"
authors = ["Zoxc <zoxc32@gmail.com>"]
description = "a horde of threads"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Zoxc/horde"
keywords = ["atomic", "concurrent", "hashmap", "lock-free"]
categories = ["concurrency", "data-structures"]
publish = false

[lib]
crate-type = ["rlib"]

[features]
default = []
nightly = []

[dependencies]
parking_lot = "0.12.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(code)'] }

[profile.bench]
debug = 0
codegen-units = 1

[profile.release]
codegen-units = 1
